# lib/db/src/schema/index.ts
@@ -1,2 +1,4 @@
 export * from "./threats";
 export * from "./recommendations";
+export * from "./conversations";
+export * from "./messages";
